# api/swagger.json
@@ -27,6 +27,37 @@
                 }
             }
         },
+        "/student": {
+            "put": {
+                "description": "创建学生",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "example"
+                ],
+                "summary": "student example",
+                "parameters": [
+                    {
+                        "description": "姓名",
+                        "name": "student",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/service.Student"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "学生",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/system/health": {
             "get": {
                 "description": "do ping",
@@ -72,6 +103,11 @@
                     }
                 }
             }
+        }
+    },
+    "definitions": {
+        "service.Student": {
+            "type": "object"
         }
     }
 }
